cargo-workspaces/tests/snapshots/create__create_bin_2015-2.snap
---
source: tests/create.rs
assertion_line: 93
expression: "&workspace_manifest"
---
[workspace]
members = [
	"dep*",
	"mynewcrate-bin-2015",
]
exclude = [
	"tmp*",
]

