cargo-workspaces/tests/snapshots/create__create_bin_2015.snap
---
source: tests/create.rs
assertion_line: 87
expression: "&manifest"
---
[package]
name = "mynewcrate-bin-2015"
version = "0.0.0"
edition = "2015"

[dependencies]
