cargo-workspaces/tests/snapshots/create__create_lib_2015.snap
---
source: tests/create.rs
expression: "&manifest"

---
[package]
name = "mynewcrate-lib-2015"
version = "0.0.0"
edition = "2015"

[dependencies]
