cargo-workspaces/tests/snapshots/create__create_lib_2018.snap
---
source: tests/create.rs
expression: "&manifest"

---
[package]
name = "mynewcrate-lib-2018"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
