cargo-workspaces/tests/snapshots/create__exclude_fails.snap
---
source: tests/create.rs
assertion_line: 241
expression: err
---
error: path for crate is in workspace.exclude list (tmp*)

