cargo-workspaces/tests/snapshots/create__member_glob-2.snap
---
source: tests/create.rs
assertion_line: 266
expression: "&workspace_manifest"
---
[workspace]
members = [
	"dep*",
]
exclude = [
	"tmp*",
]

